(GUI) [Fix] Remove 'width: 100%' from base class 'media-container'; include 'align-center'
- aspect-ratio is required for 'height: auto' to take effect
- Had to duplicate 'align-center' since native CSS doesn't support class inheritance...
- Could require 'w-100' in 'media-container-search' and 'media-container-view', but feels unintuitive
- Meta-container on homepage effectively has 400% width (col-md-2 * 24)

--- a/static/css/pages.css
+++ b/static/css/pages.css
@@ -19,9 +19,13 @@
 }
 
 .media-container {
-    width: 100%;
     height: auto;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
 }
 
 /* Navbar */
@@ -48,6 +52,10 @@
     max-width: 100%;
 }
 
+.media-container-home {
+    aspect-ratio: 16 / 9;
+}
+
 /* Search */
 
 #eppValue {
@@ -63,6 +71,7 @@
 }
 
 .media-container-search {
+    width: 100%;
     aspect-ratio: 2 / 1;
 }
 
@@ -74,8 +83,8 @@
 /* View */
 
 .media-container-view {
-    display: flex;
     flex-direction: column; /* stack children vertically */
+    width: 100%;
     aspect-ratio: 16 / 9;
     border: 2px dotted lightgray;
 }
